fix author-avatar CSS (32x32 overflow hidden)

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -136,6 +136,9 @@ a {
     .border-radius(3px) !important;
     border: 1px solid #CCC;
 }
+.author-avatar {
+    width:32px; height:32px; overflow:hidden;
+}
 
 .orange-txt {
     color:@orange !important;
